2021-08-20  Alan Bujtas  <zalan@apple.com>

        [IFC][Integration] canUseForLineLayoutWithReason's establishesInlineFormattingContext should check against inflow content
        https://bugs.webkit.org/show_bug.cgi?id=229104

        Reviewed by Antti Koivisto.

        <div><div style="position: absolute"></div>this is still a inline formatting context</div>
        We don't allow to mix inline and block inflow content.
        However out-of-flow block level boxes can certainly have inline siblings. canUseForLineLayoutWithReason should check
        the content accordingly.

        * layout/integration/LayoutIntegrationCoverage.cpp:
        (WebCore::LayoutIntegration::canUseForLineLayoutWithReason):

2021-08-20  Alan Bujtas  <zalan@apple.com>

        [IFC][Integration] Walk the box tree to update the replaced content location
        https://bugs.webkit.org/show_bug.cgi?id=229105

        Reviewed by Antti Koivisto.

        Normally there are more runs than entries in the box list. It's more performant to iterate
        the box list for the renderer location adjustment.

        * layout/integration/LayoutIntegrationBoxTree.h:
        (WebCore::LayoutIntegration::BoxTree::boxAndRendererList):
        * layout/integration/LayoutIntegrationLineLayout.cpp:
        (WebCore::LayoutIntegration::LineLayout::constructContent):

2021-08-20  Simon Fraser  <simon.fraser@apple.com>

        Use UserMediaRequestIdentifier in WebKit rather than a mysterious uint64_t
        https://bugs.webkit.org/show_bug.cgi?id=229308

        Reviewed by Youenn Fablet.

        Move UserMediaRequestIdentifier to its own header.

        * Headers.cmake:
        * Modules/mediastream/UserMediaRequest.h:
        * WebCore.xcodeproj/project.pbxproj:

2021-08-20  Alan Bujtas  <zalan@apple.com>

        [LFC][Integration] Initialize root box's border and padding values
        https://bugs.webkit.org/show_bug.cgi?id=229109

        Reviewed by Antti Koivisto.
